# arcfusion-problem

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  Makefile  README.md  config.ini  docker-compose.yaml  pyproject.toml
.claude/: settings.local.json
evaluation/: check_accuracy_threshold.py  evaluate_golden_qa.py  evaluation_history.json  evaluation_results.json  golden_qa_test_cases.json
scripts/: check_accuracy_threshold.py  evaluate_golden_qa.py  ingest_pdfs.py  performance_test.py  run_api.sh  run_streamlit.sh  simple_test.py  test_components.py  test_history_compression.py
src/: config.py  main.py
src/agents/: __init__.py  clarification.py  intent_router.py  orchestrator.py  planner.py  recursive_rag.py  reflection.py  router.py  synthesis.py  web_search.py
src/api/: __init__.py  models.py  routes.py
src/core/: embeddings.py  llm_client.py
src/memory/: history_manager.py  session_manager.py
src/retrieval/: pdf_processor.py  recursive_retriever.py  reranker.py  vector_store.py  web_searcher.py
src/ui/: __init__.py  streamlit_app.py
src/utils/: logging_config.py
